--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.DetailedActivity" />
+        <activity android:name=".ui.CardInfoActivity"></activity>
+        <activity android:name=".ui.CardRegisterActivity" />
+        <activity android:name=".ui.CardActivity" />
+        <activity android:name=".ui.MypageActivity" />
+        <activity android:name=".ui.DetailedActivity">
+        </activity>
         <activity android:name=".ui.CategoryContentActivity" />
         <activity android:name=".ui.ChatActivity" />
         <activity android:name=".ui.AnalysisActivity" />
-        <activity android:name=".ui.MainActivity">
-
+        <activity android:name=".ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
