--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.CardInfoActivity"></activity>
+        <activity android:name=".ui.CardInfoActivity" />
         <activity android:name=".ui.CardRegisterActivity" />
         <activity android:name=".ui.CardActivity" />
         <activity android:name=".ui.MypageActivity" />
